--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,35 @@
-== README
+## Requirements
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Ruby on Rails, PostgreSQL installed and an IDE like VS code, Sublime Text or similar. 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+
+
+## Deployment Instructions:
+```
+1. Clone the Repo
+```
+
+2. CD into the folder and install the gems by typing in the terminal: 
+```
+bundle install
+```
+3. Create the Database by typing in the terminal: 
+```
+rails db:migrate
+```
+4. Seed the Database with categories by typing in the terminal: 
+```
+rails db:seed
+```
+5. Run rails server by typing in the terminal:  
+```
+rails s
+```
+6. Open your favorite Web Browser and type: 
+```
+http://localhost:3000
+```
+7. Register as a new user and start uploading books.
+
+8. Have fun.
